fixed weird layout issue

--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Squada+One&display=swap');
+
 $color-primary: rgb(38, 75, 97);
 $color-secondary: rgb(230, 186, 119);
 $color-grey-light: rgb(233, 233, 233);
@@ -5,4 +7,4 @@ $color-grey-dark: rgb(168, 172, 180);
 $color-dark: rgb(53, 53, 53);
 
 // Fonts 
-// $font-header: ;
+$font-header: 'Squada One', cursive;
