--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,5 +1,6 @@
+
 body {
-    font-family: "Lato", sans-serif;
+    font-family: $font-header;
     font-weight: 400;
     /*font-size: 16px;*/
     line-height: 1.7;
