--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -1,36 +1,29 @@
- 
- .splash {
-    
-   display: grid;
-   grid-row: head-start / body-end ;
 
-    height: 95vh;
-    background-color: rgba(0, 0, 0, 0.959);
-    // background-image: linear-gradient(
-    //     to right bottom,
-    //     rgba($color-primary, 0.8),
-    //     rgba($color-dark, 0.9)),
-    // url("../images/blub2.jpg");
-    // background-size: cover;
-   //   width: 100%;
+.splash {
+  position: absolute;
+  top: 0rem;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.959);
 
-    
-     &__text {
-        background-color: transparent;
-        position: absolute;
-        top: 18rem;
-        height: 1rem;
-        width: 100%;
-        text-align: center;
-        z-index: 100;
-      //   display:grid;
-        text-transform: uppercase;
-        color: $color-grey-light;
-        font-size: 4rem;
 
-        // display: grid;
-        // align-items: center;
-        // justify-items: center;
-        // text-align: center;
-     }
- }
+  &__text {
+    background-color: transparent;
+    position: absolute;
+    top: 18rem;
+    height: 1rem;
+    width: 100%;
+    text-align: center;
+    z-index: 100;
+    text-transform: uppercase;
+    color: $color-grey-light;
+    font-size: 4rem;
+
+  }
+}
+
+// .summary {
+
+//   grid-row: 2/4;
+
+// }
